# NovelVizAI

./: .gitignore  README.md  pyproject.toml  test_mongodb_api.py
.github/workflows/: test.yaml
docs/: mongodb_setup.md
scripts/: analyze_chapters.py  import_novel_metadata.py  test_mongodb_setup.py
src/novel_companion/: __init__.py  config.py
src/novel_companion/api/: __init__.py  crud.py  main.py
src/novel_companion/models/: __init__.py  data_migration.py  database.py  mongodb_connection.py  mongodb_models.py  mongodb_operations.py  schemas.py
src/novel_companion/services/: __init__.py  nlp_processor.py  openrouter_client.py
src/novelvizai/: __init__.py
